--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,8 @@
     "nodemon": "^2.0.15"
   },
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "nodemon server.js",
+    "dev": "nodemon server.js"
   },
   "author": "Your Name",
   "license": "MIT"
