--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/dotenv": "^8.2.0",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "framer-motion": "^6.2.8",
     "jquery": "^3.7.1",
