--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@iconscout/react-unicons": "^1.1.6",
+    "@ionic/react": "^8.3.1",
+    "@ionic/react-router": "^8.3.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -19,9 +21,11 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "framer-motion": "^6.2.8",
+    "ionicons": "^7.4.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.10.3",
     "react-dom": "^17.0.2",
+    "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.10.3",
     "react-multi-carousel": "^2.8.5",
     "react-scripts": "5.0.0",
